--- a/src/assets/css/heading-flicker.css
+++ b/src/assets/css/heading-flicker.css
@@ -1,12 +1,20 @@
 .heading {
   font-family: 'CODE Bold';
-  font-size: 15vw;
-  text-align: center;
   line-height: 1;
-  display: inline;
-  position: relative;
+  font-size: 20vw;
   color: #3f3d3d;
-  font-style: italic;
+  position: relative;
+}
+
+.span-header{
+  display: contents;
+}
+
+.heading-container{
+  width: 100%;
+  padding:0px;
+  justify-content: center;
+  place-items: center;
 }
 
 .main-font{
@@ -18,7 +26,8 @@
   position: absolute;
   z-index: 5;
   text-shadow: none;
-  text-align: left;
+  text-align: center;
+  left: 23.6%;
   -webkit-animation: flicker 3s linear infinite;
           animation: flicker 3s linear infinite;
 }
@@ -88,3 +97,10 @@
   src: url("../../fonts/CODE Light.otf");
 }
 /*# sourceMappingURL=heading-flicker.css.map */
+
+
+@media only screen and (min-width:1024px){
+  .heading {
+    font-size: 15vw;
+  }
+}
